# wx-mp-svr

./: README.md  pyproject.toml
demo/: demo.py
src/wx_mp_svr/: __init__.py  app.py  req_msg.py  rsp_msg.py  utils.py
